// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectName Accepts and applies additional \`style\` prop 1`] = `
Array [
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-3ixxoa-ObjectName{color:hotpink;}",
      }
    }
    data-emotion="css 3ixxoa-ObjectName"
  />,
  <span
    className="css-3ixxoa-ObjectName"
  />,
]
`;

exports[`ObjectName should apply dimming if \`dimmed\` prop is true 1`] = `
Array [
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-d9jlqg-ObjectName{color:rgb(136, 19, 145);opacity:0.6;}",
      }
    }
    data-emotion="css d9jlqg-ObjectName"
  />,
  <span
    className="css-d9jlqg-ObjectName"
  >
    testvalue
  </span>,
]
`;

exports[`ObjectName should not apply dimming if \`dimmed\` prop is false 1`] = `
Array [
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-xvz1f2-ObjectName{color:rgb(136, 19, 145);}",
      }
    }
    data-emotion="css xvz1f2-ObjectName"
  />,
  <span
    className="css-xvz1f2-ObjectName"
  >
    testvalue
  </span>,
]
`;

exports[`ObjectName should render 1`] = `
Array [
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-xvz1f2-ObjectName{color:rgb(136, 19, 145);}",
      }
    }
    data-emotion="css xvz1f2-ObjectName"
  />,
  <span
    className="css-xvz1f2-ObjectName"
  >
    testvalue
  </span>,
]
`;
